added dynamic margins to DesignView